<resources>
    <string name="app_name">MyPokemon</string>
    <string name="label_tipo">Tipo</string>
    <string name="label_generacion">Generación</string>
    <string name="label_nombre">Nombre</string>
    <string name="bt_insertar">Insertar</string>
    <string name="bt_actualizar">Editar</string>
    <string name="bt_eliminar">Eliminar</string>
    <string name="bt_consultar">Consultar a la BD</string>
    <string name="bt_ver_listview">Ver ListPokedex</string>
    <string name="bt_ver_recyclerview">Ver RecylcerPokedex</string>
    <string name="txt_imagen">Imagen</string>
    <string name="hint_identificador">Identificador del registro</string>
    <string name="aviso_identificador">Identificador</string>
    <string name="menu_op_delete">Eliminar</string>
    <string name="menu_op_share">Compartir</string>
    <string name="error_textos">error</string>

    <string name="btn_imageDownloader">Descargar</string>
    <string name="txt_descargando">Descargando…</string>
    <string name="txt_descargaCancelada">Descarga cancelada!!</string>
    <string name="txt_descargaCompleta">Descarga completada\n%d imágenes descargadas</string>


</resources>